--- a/blog/package.json
+++ b/blog/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sweetalert2": "^11.12.3",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
